--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>myfirstweb</myfirstweb>
-    
-
+    <title>Myfirstweb</myfirstweb>
 </head> 
-<body> <h1><TITLE>MYFIRSTWEB</TITLE></h1>
+<body> <h1>myfirstweb</h1>
+    <img src="" alt="">
     
 </body>
 </html> 
