--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Myfirstweb </title>
+    <link rel= "stylesheet" href= "css/styles.css">
 </head> 
 <body> <h1>myfirstweb</h1>
-    <img src="https://images.ctfassets.net/hrltx12pl8hq/7yQR5uJhwEkRfjwMFJ7bUK/dc52a0913e8ff8b5c276177890eb0129/offset_comp_772626-opt.jpg?fit=fill&w=800&h=300" alt="fotografo">
-    
+    <img src="https://images.ctfassets.net/hrltx12pl8hq/7yQR5uJhwEkRfjwMFJ7bUK/dc52a0913e8ff8b5c276177890eb0129/offset_comp_772626-opt.jpg?fit=fill&w=800&h=300" alt="fotografo" width="100%">
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias vitae asperiores quaerat autem repellat labore pariatur maiores exercitationem at animi perspiciatis, recusandae numquam reiciendis quo eligendi. Inventore est corporis cupiditate.</p>
 </body>
 </html> 
 
